# Advent-of-Code

./: .gitignore  README.md
2024/: Cargo.toml
2024/python/: day03.py  pyproject.toml
2024/python/src/: day01.py  day02.py  day03.py  day04.py  day05.py  day05_challenge.txt  day06.py  day06_challenge.txt  day06_visited.txt  day18.py  day18_challenge.txt
2024/rust/: Cargo.toml
2024/rust/src/: day01.rs  day01_challenge.txt  day03_challenge.txt  day04_challenge.txt  main.rs
2024/src/: day01.py  day01.rs  day02_challenge.txt  day04.py  main.rs
2025/rust/: Cargo.toml
2025/rust/.cargo/: config.toml
2025/rust/src/: day01.rs  day02.rs  day03.rs  main.rs
2025/rust/src/day01/: mod.rs
2025/rust/src/day02/: mod.rs
2025/rust/src/day03/: mod.rs
2025/rust/src/day04/: mod.rs
2025/rust/src/day05/: mod.rs
2025/rust/src/day06/: mod.rs
2025/rust/src/day07/: mod.rs
2025/rust/src/day08/: mod.rs
2025/rust/src/day09/: mod.rs
2025/rust/src/day10/: mod.rs
2025/rust/src/day11/: mod.rs
2025/rust/src/day12/: mod.rs
