[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.11.0"
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = "0.3.22"
z3 = { version = "0.19.6", features = ["bundled"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
